--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@ Dropdown
     </div> 
 
 <div class="hero-unit">
-        <h1>Hello, world!</h1>
+        <h1>Ryshard's Git</h1>
       </div>
 
 
 <div class="container">
    <!--<div class="row-fluid">-->
       <div class="span4">
-         <h2>Heading</h2>
+         <h2>Gabriel</h2>
               <p>
-              Jujubes cheesecake soufflé wafer carrot cake. Gummies lollipop jelly beans candy canes topping chocolate bar dessert cookie bonbon. Sweet topping candy icing. Fruitcake dragée toffee topping dragée brownie macaroon marzipan fruitcake. Pastry sweet roll jelly beans jelly-o. Wafer cookie lollipop donut jelly beans candy brownie candy canes gummi bears. Bonbon oat cake dessert topping muffin candy chocolate powder jujubes. Danish jelly beans bonbon halvah. Biscuit toffee lemon drops sesame snaps. Fruitcake jelly lemon drops macaroon.
+              
             </p>
 
             <div class="row-fluid">
@@ -70,13 +70,13 @@ Dropdown
 
          <div class="span8">
               <h2>Heading</h2>
-              <p>Toffee donut sugar plum pudding cheesecake brownie. Oat cake cookie lemon drops. Gummies jujubes gummies biscuit marzipan unerdwear.com chocolate. Macaroon ice cream jelly-o carrot cake. Icing gingerbread brownie jelly-o apple pie jelly. Danish jelly-o cake caramels topping marshmallow gummi bears gummies. Chupa chups applicake liquorice lemon drops muffin sesame snaps topping sesame snaps icing. </p>
+              <p> </p>
 
               <p>
-                Lollipop jelly-o liquorice topping bear claw topping. Unerdwear.com halvah gingerbread topping pie marshmallow dessert apple pie. Chocolate bar icing donut dragée sweet roll jujubes gummi bears toffee biscuit. Jelly beans pastry candy fruitcake sesame snaps. Powder chupa chups sweet. Halvah ice cream biscuit tart cotton candy apple pie toffee gingerbread. Ice cream chocolate cake oat cake oat cake dessert pudding jelly beans oat cake fruitcake. Apple pie caramels toffee tiramisu gummi bears.
+                
               </p>
 
-              <p><a class="btn" href="#">View details &raquo;</a></p>
+              <p><a class="btn" href="#">Some button</a></p>
        </div>
 
 
