--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World! - index.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Gabriel Garus</title>
+</head>
+<body>
+	<h1>Gabriel Garus</h1>
+</body>
+</html>
