--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 layout: main
 ---
 <div class="content">
-  <h2>Expertise:</h2>
+  <h2><em>Expertise:</em></h2>
+  <br />
   <ul class="expertise main">
     <li>
       {% capture itemInfo %}
@@ -36,11 +37,11 @@ layout: main
       {% include expertise.html text="WordPress" info=itemInfo lastBall="true" %}
     </li>
   </ul>
+  
+  <br /><div class="divider"></div><br />
 
+  <h3><em>Other:</em></h3>
   <br />
-  <hr />
-  <br />
-  <h3>Other:</h3>
   <ul class="expertise">
     <li>
       {% capture itemInfo %}
@@ -88,5 +89,28 @@ layout: main
       {% include expertise.html text="Optimisations" info=itemInfo lastBall="true" %}
     </li>
   </ul>
+
+  <br /><div class="divider"></div><br />
+
+  <div class="cta-links">
+    <a class="linkedin-link" href="http://www.linkedin.com/in/gabriel-garus-8891a333" target="_blank">
+      {% include svg/linkedin.svg %}
+    </a>
+    <a class="gh-link" href="https://github.com/Ryshard" target="_blank">
+      {% include svg/githublogo.svg %}
+    </a>
+    <a class="cv-link" href="https://gabrielgarus.s3-eu-west-1.amazonaws.com/docs/cv/gabriel-garus-cv-2020-v1.pdf" target="_blank">
+      Download my cv (pdf)
+    </a>
+  </div>
+
+  <br /><div class="divider"></div><br />
+
+  <h3>Contact:</h3>
+  <div id="myEmail" class="contact-email">
+    <a href="mailto:gabriel.garus@protonmail.com" class="email-link"><div class="envelope"></div></a>
+    <p itemprop="email" class="email-text">gabriel.garus@protonmail.com</p>
+    <button class="email-copy" title="copy to clipboard">copy email ( ctrl+c )</button>
+  </div>
 
 </div>
