--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ layout: main
   <br /><div class="divider"></div><br />
 
   <div class="cta-links">
-    <a class="linkedin-link" href="http://www.linkedin.com/in/gabriel-garus-8891a333" target="_blank">
+    <a class="linkedin-link" href="https://www.linkedin.com/in/gabriel-garus-8891a333" target="_blank">
       {% include svg/linkedin.svg %}
     </a>
     <a class="gh-link" href="https://github.com/Ryshard" target="_blank">
@@ -138,6 +138,6 @@ layout: main
           - Frank Zappa 
       </p>
     </div>
-    <img src="https://gabrielgarus.s3-eu-west-1.amazonaws.com/img/gabriel-in-snow.jpg" alt="gabriel garus" title="gabriel garus" />
+    <img src="https://gabrielgarus.s3-eu-west-1.amazonaws.com/img/gabriel-in-snow.jpg" loading="lazy" alt="gabriel garus" title="gabriel garus" />
   </div>
 </div>
