--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ layout: main
         <li>gitLab</li>
       </ul>
       {% endcapture %}
-      {% include expertise.html text="Version control" info=itemInfo lastBall="true" %}
+      {% include expertise.html text="Version control" info=itemInfo %}
     </li>
     <li>
       {% capture itemInfo %}
@@ -77,7 +77,7 @@ layout: main
         <li>AWS CodeDeploy</li>
       </ul>
       {% endcapture %}
-      {% include expertise.html text="CI/CD pipelines" info=itemInfo lastBall="true" %}
+      {% include expertise.html text="CI/CD pipelines" info=itemInfo %}
     </li>
     <li>
       {% capture itemInfo %}
