deploy: 3159bf089bc07094b147fac551143e67866756e9

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     Always open to new ideas.",
     "alternateName": "Gabriel Garus",
     "url": "https://ryshard.github.io/",
-    "image": "https://ryshard.github.io/img/gabriel-garus.jpg",
+    "image": "https://ryshard.github.io/img/logo.png",
     "email": "gabriel.garus@protonmail.com",
     "birthPlace" : {
       "@type": "Place",
